Fix header visibility and add some styles

--- a/src/components/Shop/shop.css
+++ b/src/components/Shop/shop.css
@@ -1,8 +1,47 @@
 .product {
-  border: 1px solid black;
+  background-color: white;
+  padding: 15px;
+  border-radius: 15px;
+  text-align: center;
+  margin-bottom: 20px;
 
   img {
     height: auto;
     width: 100px;
+  }
+
+  h1 {
+    margin-top: 10px;
+    border-top: 1px solid rgb(216, 216, 216);
+    padding-top: 10px;
+    font-size: 1.3rem;
+    margin-bottom: 10px;
+  }
+
+  p {
+    font-size: 1rem;
+    padding-bottom: 15px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid rgb(216, 216, 216);
+  }
+
+  h2 {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+  }
+
+  button {
+    background-color: rgb(21, 179, 0);
+    color: white;
+    padding: 8px 15px;
+    font-size: 1.2rem;
+    cursor: pointer;
+    border: none;
+    border-radius: 10px;
+    box-shadow:
+      inset 0 -0.0625em 0.0625em 0.125em rgb(0 0 0 / 0.1),
+      inset 0 -0.125em 0.0625em rgb(0 0 0 / 0.2),
+      inset 0 0.1875em 0.0625em rgb(255 255 255 / 0.3),
+      0 0.125em 0.125em rgb(0 0 0 / 0.5);
   }
 }
