--- a/src/index.css
+++ b/src/index.css
@@ -32,16 +32,24 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: rgb(240, 240, 240);
-  border-bottom: 1px solid var(--black);
+  background: linear-gradient(to right, var(--black), #4e4e4e);
+  border-bottom: 1px solid rgb(90, 90, 90);
+  color: white;
   z-index: 10;
-  transition: trasnform 0.3s ease;
+  position: relative;
+  width: 100%;
 }
 
-.header.visible {
-  transform: translateY(0);
+.visible {
+  transform: none;
+  transition: transform 0.5s ease;
   position: fixed;
-  width: 100%;
+}
+
+.invisible {
+  transform: translateY(-100%);
+  transition: transform 0.5s ease;
+  position: fixed;
 }
 
 .title {
@@ -50,7 +58,7 @@ body {
 
 a {
   text-decoration: none;
-  color: var(--black);
+  color: white;
   font-weight: 700;
 }
 
@@ -92,6 +100,11 @@ nav {
     height: 100%;
     color: white;
   }
+}
+
+#detail {
+  padding: 20px;
+  background-color: var(--black);
 }
 
 @media (max-width: 480px) {
